--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -35,11 +35,15 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane2" pref="560" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" alignment="0" pref="560" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblLog" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
+                              <Component id="btnNewLog" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnLoadLog" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btnCleanUp" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -134,6 +138,8 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnLoadLog" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblLog" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCleanUp" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnNewLog" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
           </Group>
@@ -315,5 +321,21 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="btnCleanUp">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Clean Up Logs"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCleanUpActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnNewLog">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="New Log"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewLogActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
